feat: redesign HomePage and implement ToolSuggestionForm for user input on new tools

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-AU">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1e40af" />
+
+    <!-- Primary Meta Tags -->
+    <title>Buete Consulting | Custom Healthcare Websites & Pharmacy Tools</title>
+    <meta
+      name="title"
+      content="Buete Consulting | Custom Healthcare Websites & Pharmacy Tools"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Professional custom-coded websites for pharmacies, GP clinics, and allied health. Access free pharmacy calculators, dose calendars, and clinical tools. Built from code, not templates."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      name="keywords"
+      content="pharmacy website, GP website, allied health website, custom healthcare websites, pharmacy calculators, dose calendar, clinical tools, Home Medicine Review, HMR software, pharmacy tools Australia"
+    />
+    <meta name="author" content="Buete Consulting" />
+    <meta name="robots" content="index, follow" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.bueteconsulting.au/" />
+    <meta
+      property="og:title"
+      content="Buete Consulting | Custom Healthcare Websites & Pharmacy Tools"
+    />
+    <meta
+      property="og:description"
+      content="Professional custom-coded websites for pharmacies, GP clinics, and allied health. Access free pharmacy calculators and clinical tools."
+    />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/og-image.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.bueteconsulting.au/" />
+    <meta
+      property="twitter:title"
+      content="Buete Consulting | Custom Healthcare Websites & Pharmacy Tools"
+    />
+    <meta
+      property="twitter:description"
+      content="Professional custom-coded websites for pharmacies, GP clinics, and allied health. Access free pharmacy calculators and clinical tools."
+    />
+    <meta
+      property="twitter:image"
+      content="%PUBLIC_URL%/og-image.png"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.bueteconsulting.au/" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "Buete Consulting",
+      "description": "Custom healthcare website development and pharmacy clinical tools",
+      "url": "https://www.bueteconsulting.au",
+      "logo": "https://www.bueteconsulting.au/logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "AU"
+      },
+      "areaServed": "AU",
+      "serviceType": ["Web Development", "Healthcare IT Solutions", "Pharmacy Tools"],
+      "priceRange": "$$"
+    }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
